[tool.poetry]
name = "streamlit-baseball-sample"
version = "0.1.0"
description = ""
authors = ["Shinichi Nakagawa <spirits.is.my.rader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
streamlit = "^0.80.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
